; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx25840/extr_cx25840-core.c_cx25840_s_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx25840/extr_cx25840-core.c_cx25840_s_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.cx25840_state = type { i32, i32, i32 }
%struct.i2c_client = type { i32 }
%struct.cx25840_platform_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*, i32, i8*)* @cx25840_s_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx25840_s_config(%struct.v4l2_subdev* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.v4l2_subdev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.cx25840_state*, align 8
  %8 = alloca %struct.i2c_client*, align 8
  %9 = alloca %struct.cx25840_platform_data*, align 8
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %4, align 8
  %11 = call %struct.cx25840_state* @to_state(%struct.v4l2_subdev* %10)
  store %struct.cx25840_state* %11, %struct.cx25840_state** %7, align 8
  %12 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %4, align 8
  %13 = call %struct.i2c_client* @v4l2_get_subdevdata(%struct.v4l2_subdev* %12)
  store %struct.i2c_client* %13, %struct.i2c_client** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %32

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to %struct.cx25840_platform_data*
  store %struct.cx25840_platform_data* %18, %struct.cx25840_platform_data** %9, align 8
  %19 = load %struct.cx25840_platform_data*, %struct.cx25840_platform_data** %9, align 8
  %20 = getelementptr inbounds %struct.cx25840_platform_data, %struct.cx25840_platform_data* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.cx25840_state*, %struct.cx25840_state** %7, align 8
  %23 = getelementptr inbounds %struct.cx25840_state, %struct.cx25840_state* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 4
  %24 = load %struct.i2c_client*, %struct.i2c_client** %8, align 8
  %25 = load %struct.cx25840_state*, %struct.cx25840_state** %7, align 8
  %26 = getelementptr inbounds %struct.cx25840_state, %struct.cx25840_state* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.cx25840_state*, %struct.cx25840_state** %7, align 8
  %29 = getelementptr inbounds %struct.cx25840_state, %struct.cx25840_state* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @set_input(%struct.i2c_client* %24, i32 %27, i32 %30)
  br label %32

32:                                               ; preds = %16, %3
  ret i32 0
}

declare dso_local %struct.cx25840_state* @to_state(%struct.v4l2_subdev*) #1

declare dso_local %struct.i2c_client* @v4l2_get_subdevdata(%struct.v4l2_subdev*) #1

declare dso_local i32 @set_input(%struct.i2c_client*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
